# VMResearch

./: Cargo.toml  LICENSE  README.md  perf.data  perf.data.old
benches/: vm_benchmark.rs
report/report/: index.html
report/vm_runtime_research/computed-goto/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/vm_runtime_research/computed-goto/report/: index.html
report/vm_runtime_research/report/: index.html
report/vm_runtime_research/switch-case/base/: benchmark.json  estimates.json  sample.json  tukey.json
report/vm_runtime_research/switch-case/report/: index.html
src/: bytecode.rs  computed_goto.rs  dynamic_dispatch.rs  dynamic_dispatch_asm.asm  lib.rs  main.rs  predicated_branching.rs  switch_case.rs  util.rs
